Fix username overflow bug

--- a/unb-base/style.css
+++ b/unb-base/style.css
@@ -753,6 +753,14 @@ body {
   opacity: 1;
 }
 
+.user-name{
+  width: 175px;
+  display: block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 /* mudancas joenio */
 
 .highlights-block {
